chat: fix glitchy spacing between messages
Fixes #43 for v2.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1045,6 +1045,11 @@
         /// Messages area.
         .copyable-area > div[tabindex] {
             c: 0 bd;
+            /// Chat -> Fix message spacing reported in #43.
+            ._1ays2 {
+                display: flex i;
+                flex-direction: column i;
+            }
             /// Chat -> Select messages.
             &._2AqZl {
                 c: 0 0 t;
